-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.0
-
-
77de4a9bb4e15d19bd3f87f03f4b2d06a68277b5 (qt/qtbase/dev) d7fb3b27401be016b345672669a9bb2ab2a51607 (qt/qtbase/6.2)
if you have a QToolButton with arrow and toolButtonStyle set to ToolButtonTexBesideIcon and set a stylesheet on the button, there will be two buttons rendered - one to the left and one at the centre of the button.
This is reproducible with Qt6 designer. Qt5 works good.
Attached Ui file shows this. Problem is only when in stylesheet border is used.
border: none
- is duplicated by
-
QTBUG-100109 QToolButton "doubles" the arrow
-
- Closed
-
- resulted from
-
QTBUG-27640 QToolButton::menu-arrow{image:none;} does not work in Custom TitleBar
-
- Closed
-
- resulted in
-
QTBUG-100433 Regression in 6.2.3 with stylesheets and button rendering
-
- Closed
-
For Gerrit Dashboard: QTBUG-98286 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
382083,11 | Fix and complete style sheet support for QToolButton | dev | qt/qtbase | Status: MERGED | +2 | 0 |
383264,4 | Fix and complete style sheet support for QToolButton | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
383265,3 | Fix and complete style sheet support for QToolButton | 6.2.2 | qt/qtbase | Status: ABANDONED | 0 | 0 |